# gs-app-template

./: .clang-format  .gitchangelog.rc  .gitignore  .lcovrc  CMakeLists.txt  CPPLINT.cfg  README.rst  REUSE.toml  config.h.in  tox.ini
.github/: dependabot.yml
.github/codeql/: codeql-config.yml  default.qls
.github/workflows/: codeql.yml  coverage.yml  coverity.yml  cpplint.yml  smoke.yml
app_name/: CMakeLists.txt
app_name/src/: main.cpp  turbo.cpp  turbo.h
app_name/test/: app_name_test.cpp
cmake/: GetGitRev.cmake  GetGitRev.cmake.in  clang_toolchain.cmake
cmake/modules/: SetRPATH.cmake  TestCoverage.cmake
docs/dev/: generate_changelog.rst  pre-commit-config.rst
